--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "build": "rimraf ./dist && rollup -c rollup.config.mjs",
-    "dev":"rollup -c rollup.config.mjs --watch"
+    "dev": "rollup -c rollup.config.mjs --watch"
   },
   "exports": {
     ".": {
@@ -26,6 +26,7 @@
     "@babel/core": "^7.21.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@iconify/react": "^4.1.0",
     "@rollup/plugin-babel": "^6.0.3",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
@@ -41,5 +42,8 @@
     "tailwindcss": "^3.2.7",
     "tslib": "^2.5.0",
     "typescript": "4.9.5"
+  },
+  "dependencies": {
+    "@types/react": "18.0.28"
   }
 }
