--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -4,6 +4,8 @@
     "moduleResolution": "node",
     "esModuleInterop": true,
     "outDir": "dist",
+    "declaration": true,
+    "declarationDir": "types",
     "lib": ["es2015", "dom"]
   }
 }
