--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -10,25 +10,31 @@
   },
   "dependencies": {
     "@magnum/ui": "workspace:^1.0.0",
-    "@next/font": "13.1.6",
-    "@types/node": "18.13.0",
+    "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "classnames": "^2.3.2",
-    "eslint": "8.35.0",
-    "eslint-config-next": "13.2.1",
+    "eslint": "8.36.0",
+    "eslint-config-next": "13.2.4",
+    "framer-motion": "^10.3.2",
     "immer": "^9.0.19",
     "nanoid": "^4.0.1",
-    "next": "13.2.1",
+    "next": "13.2.4",
     "react": "18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.5",
+    "react-tracked": "^1.7.11",
+    "swr": "^2.1.0",
     "typescript": "4.9.5",
-    "zustand": "^4.3.4"
+    "use-immer": "^0.8.1",
+    "zustand": "^4.3.6"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
+    "@iconify/react": "^4.1.0",
+    "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
