--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,13 +5,17 @@
   "main": "./dist/index.js",
   "types": "./dist/types/index.d.ts",
   "files": [
-    "dist"
+    "dist",
+    "tailwind.config.cjs"
   ],
   "scripts": {
     "build": "rimraf ./dist && rollup -c rollup.config.mjs",
     "dev": "rollup -c rollup.config.mjs --watch"
   },
   "exports": {
+    "./tailwind": {
+      "require": "./tailwind.config.cjs"
+    },
     ".": {
       "import": "./dist/index.js"
     },
@@ -32,7 +36,6 @@
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^11.0.0",
     "autoprefixer": "^10.4.13",
-    "classnames": "^2.3.2",
     "cssnano": "^5.1.15",
     "postcss": "^8.4.21",
     "react": "18.2.0",
@@ -41,9 +44,10 @@
     "rollup-plugin-postcss": "^4.0.2",
     "tailwindcss": "^3.2.7",
     "tslib": "^2.5.0",
-    "typescript": "4.9.5"
+    "typescript": "5.0.2"
   },
   "dependencies": {
-    "@types/react": "18.0.28"
+    "@types/react": "18.0.28",
+    "clsx": "^1.2.1"
   }
 }
