feat:更改主题色调

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,6 @@
 {
-  "extends": ["next/babel","next/core-web-vitals"],
+  "root": true,
+  "extends": ["next/babel", "next/core-web-vitals"],
   "rules": {
     "indent": ["error", 2]
   }
