--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -3,9 +3,8 @@
     "jsx": "react-jsx",
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "outDir": "dist",
     "declaration": true,
-    "declarationDir": "types",
+    "declarationDir": "/",
     "lib": ["es2015", "dom"]
   }
 }
