--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -27,9 +27,11 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
     "react-tracked": "^1.7.11",
+    "sonner": "^0.3.0",
     "swr": "^2.1.0",
     "typescript": "4.9.5",
     "use-immer": "^0.8.1",
+    "zod": "^3.21.4",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
