--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/modifiers": "^6.0.1",
+    "@dnd-kit/sortable": "^7.0.2",
+    "@dnd-kit/utilities": "^3.2.1",
     "@magnum/ui": "workspace:^1.0.0",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "add": "^2.0.6",
     "axios": "^1.3.4",
     "clsx": "^1.2.1",
     "eslint": "8.36.0",
