--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -31,6 +31,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
+    "react-json-view": "^1.21.3",
     "react-tracked": "^1.7.11",
     "sonner": "^0.3.0",
     "swr": "^2.1.0",
