--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -31,6 +31,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
+    "react-hotkeys-hook": "^4.3.8",
     "react-json-view": "^1.21.3",
     "react-tracked": "^1.7.11",
     "sonner": "^0.3.0",
@@ -44,6 +45,6 @@
     "@iconify/react": "^4.1.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.3.0"
   }
 }
