--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "dependencies": {
     "eslint": "8.35.0",
     "prettier": "^2.8.4",
-    "turbo": "^1.8.5"
+    "turbo": "^1.8.8"
+  },
+  "devDependencies": {
+    "prettier-plugin-tailwindcss": "^0.2.7"
   }
 }
