--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -31,10 +31,12 @@
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^11.0.0",
+    "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.13",
     "cssnano": "^5.1.15",
     "postcss": "^8.4.21",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "rimraf": "^4.3.0",
     "rollup": "^3.18.0",
     "rollup-plugin-postcss": "^4.0.2",
