--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "compilerOptions": {
     "jsx": "react-jsx",
+    "strict": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
     "declaration": true,
     "declarationDir": "/",
-    "lib": ["es2015", "dom"]
+    "lib": ["ES2018", "dom"]
   }
 }
