--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -14,6 +14,8 @@
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
     "@magnum/ui": "workspace:^1.0.0",
+    "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.3",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
