--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -16,16 +16,19 @@
     "@magnum/ui": "workspace:^1.0.0",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.3",
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "add": "^2.0.6",
     "axios": "^1.3.4",
     "clsx": "^1.2.1",
+    "dayjs": "^1.11.7",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.12.1",
     "immer": "^9.0.21",
+    "js-cookie": "^3.0.1",
     "nanoid": "^4.0.2",
     "next": "13.3.0",
     "react": "18.2.0",
