--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "eslint": "8.35.0",
-    "prettier": "^2.8.4",
-    "turbo": "^1.9.1"
+    "eslint": "8.38.0",
+    "prettier": "^2.8.7",
+    "turbo": "^1.9.3"
   },
   "devDependencies": {
+    "typescript": "5.0.4",
     "prettier-plugin-tailwindcss": "^0.2.7"
   }
 }
