--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.3",
     "@types/js-cookie": "^3.0.3",
+    "@types/lodash-es": "^4.17.7",
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
@@ -29,6 +30,7 @@
     "framer-motion": "^10.12.4",
     "immer": "^10.0.1",
     "js-cookie": "^3.0.1",
+    "lodash-es": "^4.17.21",
     "nanoid": "^4.0.2",
     "next": "13.3.0",
     "react": "18.2.0",
