--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -16,14 +16,15 @@
     "@magnum/ui": "workspace:^1.0.0",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.3",
+    "@tremor/react": "^2.2.0",
     "@types/js-cookie": "^3.0.3",
     "@types/lodash-es": "^4.17.7",
     "@types/node": "18.15.11",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
-    "add": "^2.0.6",
     "axios": "^1.3.5",
     "clsx": "^1.2.1",
+    "copy-to-clipboard": "^3.3.3",
     "dayjs": "^1.11.7",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
